Geometry Nodes: Default triangulation method different from Blender drawing #98073

Closed
opened 2022-05-12 16:22:49 +02:00 by Simon Thommes · 6 comments
Member

System Information
Operating system: Linux-5.17.5-76051705-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.68.02

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-12 08:29, hash: 31202ea628
Worked: unknown

Short description of error
The default triangulation method of geometry nodes seems to differ from what Blender is regularly using for drawing.
image.png

Exact steps for others to reproduce the error
File:
geonodes_default_triangulation.blend

**System Information** Operating system: Linux-5.17.5-76051705-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.68.02 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-12 08:29, hash: `31202ea628` Worked: unknown **Short description of error** The default triangulation method of geometry nodes seems to differ from what Blender is regularly using for drawing. ![image.png](https://archive.blender.org/developer/F13070792/image.png) **Exact steps for others to reproduce the error** File: [geonodes_default_triangulation.blend](https://archive.blender.org/developer/F13070794/geonodes_default_triangulation.blend)
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Interesting. it looks like the drawing code always recalculates the triangulation, even if it already exists (mesh_render_data_update_looptris). That seems like a missed opportunity from a performance perspective. Changing it doesn't seem to solve the problem though.

Interesting. it looks like the drawing code always recalculates the triangulation, even if it already exists (`mesh_render_data_update_looptris`). That seems like a missed opportunity from a performance perspective. Changing it doesn't seem to solve the problem though.

This issue was referenced by 0d7d8c73cf

This issue was referenced by 0d7d8c73cf5c5c5f05c6a56951e4e5cd24871c12
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-09-23 15:26:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98073
No description provided.